--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,4 @@
+
 .navbar{
     background-color: indianred;
 }
@@ -5,6 +6,7 @@
     width: 25%;
     height: auto;
 }
+
 
 h1{
     text-transform: uppercase;
@@ -69,4 +71,14 @@ p{
 
 .taken{
     margin-top: 5%;
+}
+
+.power{
+    font-style: italic;
+    align-items:flex-start;
+
+}
+
+.imagination{
+    font-family: "book antiqua";
 }
