--- a/Nintenbro/assets/css/style.css
+++ b/Nintenbro/assets/css/style.css
@@ -124,205 +124,70 @@ table {
     border-spacing: 0;
 }
 
-
 /* Mon code */
-@font-face {
-    font-family: 'Nu Hanafudaya';
-    src: url('../fonts/NuHanafudaya-Regular.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap;
 
-    font-family: 'Hylia Serif Beta';
-    src: url('../fonts/HyliaSerifBeta-Regular.woff2') format('woff2'),
-        url('../fonts/HyliaSerifBeta-Regular.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap;
+
+
+/* .Pokemon{
+    background: rgb(251,27,27);
+    background: linear-gradient(180deg, rgba(251,27,27,1) 0%, rgba(0,0,0,1) 41%, rgba(255,255,255,1) 81%);
 }
 
-header {
-    padding: 10px;
+.Zelda{
     background-color: #0d9263;
 }
 
-nav {
-
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-#zelda {
-    display: flex;
-    flex-direction: column-reverse;
-    font-family: "Nu Hanafudaya";
-    align-items: center;
-    text-decoration: none;
-    color: white;
-}
-
-#triforce:hover{
-    content: url(../images/icons8-triforcejaune-100.png);
-    /* background-position: ; */
-    /* background-repeat: no-repeat;
-    z-index: 9999; */
-}
-
-#pika:hover{
-    content: url(../images/icons8-pokémoncolor-90.png);
-}
-
-#itsame:hover{
-    content: url(../images/ITAMEMARIO.png);
-}
-
-body {
-    background-image: url(../images/zelda-forest.jpg);
-    /* background-position: center; */
-    background-size: cover;
-    background-repeat: no-repeat;
-    /* height: 1080px; */
-    color: white;
-}
-
-footer {
-    position: fixed;
-    width: 100%;
-    bottom: 0;
-}
-
-h1 {
-    text-align: center;
-    color: white;
-    text-shadow: black 0.1em 0.1em 0.2em;
-}
-
-h2{
-    padding-left: 10px;
-    text-shadow: black 0.1em 0.1em 0.2em;
-}
-
-h3{
-    padding-left: 10px;
-}
-
-h1, h2, h3{
-    text-decoration:underline;
-    font-family: "Hylia Serif Beta";
-}
-
-h4{
-    font-family: "Hylia Serif Beta";
-}
-
-section {
-    background: rgba(0, 0, 0, 0.5);
-    margin-left: 20px;
-    margin-right: 20px;
-}
-
-#oot {
-    width: 40%;
-}
-
-#totk {
-    width: 30%;
-}
-
-#jeux {
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.articles {
-    /* display: flex;
-    align-items: flex-start; */
-    text-align: center;
-    /* justify-content: center; */
-    padding: 5%;
-}
-
-/* #big {
-    border-left: 0.5px black solid;
-    border-right: 0.5px black solid;
+.Mario{
+    background-color: #C2352D;
 } */
 
-blockquote {
-    margin: 0;
+body{
+    display: flex;
+    justify-content: space-between;
+    height: 100vh;
 }
 
-blockquote p {
-    padding: 15px;
-    background: rgba(88, 88, 88, 0.41);
-    border-radius: 5px;
+div{
+    width: 100vh;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
 }
 
-blockquote p::before {
-    content: '\201C';
+a{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
-blockquote p::after {
-    content: '\201D';
-}
-
-.collapsible {
-    background-color: rgba(88, 88, 88, 0.41);
-    color: white;
-    cursor: pointer;
-    padding: 18px;
-    margin-top: 10px;
-    width: 100%;
-    border: none;
-    border-radius: 50px;
-    text-align: left;
-    outline: none;
-    font-size: 15px;
-}
-
-.active,
-.collapsible:hover {
-    background-color: rgba(49, 49, 49, 0.41);;
-}
-
-.content {
-    padding: 0 18px;
-    /* display: none; */
-    overflow: hidden;
-    background-color: rgba(0, 0, 0, 0.5);
 
 
-    max-height: 0;
-    transition: max-height 0.2s ease-out;
-}
 
-.content > p{
-    margin-top: 10px;
-    margin-bottom: 10px;
-}
-
-.artimg{
-    padding: 10px;
-}
-
-#history > p{
-    padding-left: 20px;
-}
-
-p{
-    font-family: "Berlin Sans FB";
-}
-
-footer{
-    position: sticky;
-    bottom: 0;
-    text-align:right;
-}
-
-@media screen and (max-width: 768px){
-
-    #timeline{
+a{
         width: 100%;
-    }
-    
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        text-decoration: none;
+        color: black;
+        font-size: 110%;
+        font-weight: bolder;
+}
+
+
+
+#pkmn{
+    background: rgb(251,27,27);
+    background: linear-gradient(180deg, rgba(251,27,27,1) 0%, rgba(0,0,0,1) 41%, rgba(255,255,255,1) 81%);
+}
+
+#zelda{
+    background-color: #0d9263;
+}
+
+#mario{
+    background-color: #C2352D;
 }
