Final Edition 2 : Battle Royal - The Prout Came Back
pouet

--- a/Nintenbro/assets/css/zelda.css
+++ b/Nintenbro/assets/css/zelda.css
@@ -170,7 +170,7 @@ nav {
 }
 
 #pika:hover{
-    content: url(../images/icons8-pokémoncolor-90.png);
+    content: url(../images/icons8-pokemoncolor-90.png);
 }
 
 #itsame:hover{
